--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "advent_of_code"
 version = "0.11.0"
-authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
+authors = ["Jan Niklas Richter <5812215+ArcticXWolf@users.noreply.github.com>"]
 edition = "2021"
 default-run = "advent_of_code"
 publish = false
@@ -28,3 +28,6 @@ pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
+itertools = "0.13.0"
+regex = "1.11.1"
+nom = "7.1.3"
